--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
 }
 
 a {
-  color: #2D6CDF;
+  color: #3E4095;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -63,7 +63,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6, figure {
-  color: #000;
+  color: #3E4095;
   font-family: "Roboto Slab", serif;
   font-weight: 400;
   margin: 0 0 20px 0;
@@ -120,7 +120,7 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 .fh5co-nav .top .num {
-  color: rgba(0, 0, 0, 0.6);
+  color: #3E4095;
   font-size: 13px;
   letter-spacing: 0px;
   border-left: 1px solid rgba(0, 0, 0, 0.08);
@@ -162,6 +162,12 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 5px;
   left: 0;
 }
+
+.fh5co-nav .menu-1{
+  height: 150px;
+  padding-top: 75px;
+}
+
 @media screen and (max-width: 768px) {
   .fh5co-nav .menu-1 {
     display: none;
@@ -181,13 +187,13 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-nav ul li a {
   font-size: 14px;
   padding: 30px 15px;
-  color: rgba(0, 0, 0, 0.9);
+  color: #3E4095;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 .fh5co-nav ul li a:hover, .fh5co-nav ul li a:focus, .fh5co-nav ul li a:active {
-  color: black;
+  color: #3E4095;
 }
 .fh5co-nav ul li.has-dropdown {
   position: relative;
@@ -204,7 +210,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 40px;
   left: 0;
   text-align: left;
-  background: #000;
+  background: #3E4095;
   padding: 20px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -223,7 +229,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-bottom-color: #000;
+  border-bottom-color: #3E4095;
   border-width: 8px;
   margin-left: -8px;
 }
@@ -237,7 +243,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-nav ul li.has-dropdown .dropdown li a {
   padding: 2px 0;
   display: block;
-  color: #999999;
+  color: #CCC;
   line-height: 1.2;
   text-transform: none;
   font-size: 13px;
@@ -371,6 +377,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: rgba(255, 255, 255, 0.5);
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner .btn {
+  background: #3E4095 !important;
   padding: 18px 30px !important;
   color: #fff;
   border: none !important;
@@ -408,7 +415,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-staff,
 #fh5co-contact,
 #fh5co-footer {
-  padding: 7em 0;
+  padding: 4em 0;
   clear: both;
 }
 @media screen and (max-width: 768px) {
@@ -675,7 +682,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 24px;
   margin-bottom: 20px;
   line-height: 1.5;
-  color: #000;
+  color: #3E4095;
   text-transform: uppercase;
   position: relative;
 }
@@ -843,7 +850,8 @@ h1, h2, h3, h4, h5, h6, figure {
   left: 0;
   width: 100px;
   height: 100px;
-  background: rgba(0, 0, 0, 0.03);
+  background: #3E4095;
+  color: white;
   display: table;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -865,7 +873,7 @@ h1, h2, h3, h4, h5, h6, figure {
   line-height: 1.5;
 }
 .fh5co-event h3 a {
-  color: black;
+  color: #3E4095;
 }
 
 .fh5co-blog {
@@ -916,7 +924,7 @@ h1, h2, h3, h4, h5, h6, figure {
   line-height: 1.5;
 }
 .fh5co-blog .blog-text h3 a {
-  color: black;
+  color: #3E4095;
 }
 .fh5co-blog .blog-text .btn-blog {
   background: transparent;
@@ -1091,7 +1099,7 @@ h1, h2, h3, h4, h5, h6, figure {
   letter-spacing: 2px;
 }
 #fh5co-gallery h2 span {
-  border: 2px solid rgba(0, 0, 0, 0.8);
+  border: 2px solid #3E4095;
   padding: 10px 15px;
   position: relative;
 }
