--- a/css/style.css
+++ b/css/style.css
@@ -837,6 +837,13 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 
+.fh5co-listitem {
+  position: relative;
+  width: 100%;
+  float: left;
+  margin-bottom: 30px;
+}
+
 .fh5co-event {
   position: relative;
   padding-left: 120px;
